refactor: 예외 상황 수정

--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -28,7 +28,7 @@
                     <div class="well well-sm">
                         <div class="media">
                             <a class="thumbnail pull-left" href="#">
-                                <img class="media-object" src="../../static/images/80-text.png">
+                                <img class="media-object" src="/images/80-text.png">
                             </a>
                             <div class="media-body" th:if="${user != null}">
                                 <h4 class="media-heading" th:text="${user.name}">사용자 이름</h4>
