--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -18,6 +18,9 @@
                     </div>
                 </form>
                 <ul class="nav navbar-nav navbar-right">
+                    <li th:if="${session.user != null}">
+                        <a href="#">🤗 [[${session.user.loginId}]] 🤗</a>
+                    </li>
                     <li>
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-bell"></i></a>
                         <ul class="dropdown-menu">
