--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -3,7 +3,7 @@
     <div class="navbar navbar-default" id="subnav">
         <div class="col-md-12">
             <div class="navbar-header">
-                <a href="/" class="navbar-btn btn btn-default btn-plus dropdown-toggle" data-toggle="dropdown">
+                <a href="/" class="navbar-btn btn btn-default btn-plus">
                     <i class="glyphicon glyphicon-home" style="color:#dd1111;"></i> Home
                 </a>
             </div>
