--- a/src/main/resources/templates/qna/form.html
+++ b/src/main/resources/templates/qna/form.html
@@ -14,7 +14,6 @@
 
 <body>
 
-
 <div th:replace="~{fragments/header :: header}"></div>
 
 <div th:replace="~{fragments/navbar :: navbar}"></div>
@@ -22,18 +21,16 @@
 <div class="container" id="main">
    <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
       <div class="panel panel-default content-main">
-          <form name="question" method="post" action="/questions">
-              <div class="form-group">
-                  <label for="writer">글쓴이</label>
-                  <input class="form-control" id="writer" name="writer" placeholder="글쓴이"/>
-              </div>
+          <form name="question"
+                    th:action="${article != null} ? @{'/questions/' + ${article.id}} : @{'/questions'}" method="post">
+                  <input type="hidden" name="_method" th:if="${article != null}" value="PUT" />
               <div class="form-group">
                   <label for="title">제목</label>
-                  <input type="text" class="form-control" id="title" name="title" placeholder="제목"/>
+                  <input type="text" class="form-control" id="title" name="title" placeholder="제목" th:value="${article?.title}"/>
               </div>
               <div class="form-group">
-                  <label for="contents">내용</label>
-                  <textarea name="contents" id="contents" rows="5" class="form-control"></textarea>
+                  <label for="content">내용</label>
+                  <textarea name="contents" id="content" rows="5" class="form-control" th:text="${article?.contents}"></textarea>
               </div>
               <button type="submit" class="btn btn-success clearfix pull-right">질문하기</button>
               <div class="clearfix" />
