--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -25,13 +25,16 @@
                 <h2 class="qna-title" th:text="${article.title}">글 제목</h2>
             </header>
             <div class="content-main">
+                <div th:if="${error}" class="alert alert-danger" role="alert" th:text="${error}">
+                    에러 메시지 창
+                </div>
                 <article class="article">
                     <div class="article-header">
                         <div class="article-header-thumb">
                             <img src="https://graph.facebook.com/v2.3/100000059371774/picture" class="article-author-thumb" alt="">
                         </div>
                         <div class="article-header-text">
-                            <span class="article-author-name" th:text="${article.writer}">작성자</span>
+                            <span class="article-author-name" th:text="${article.writer.name}">작성자</span>
                             <a href="/questions/413" class="article-header-time" title="퍼머링크">
                                 2015-12-30 01:47
                                 <i class="icon-link"></i>
@@ -44,16 +47,16 @@
                     <div class="article-util">
                         <ul class="article-util-list">
                             <li>
-                                <a class="link-modify-article" href="/questions/423/form">수정</a>
+                                <a th:href="@{/questions/{id}/form(id=${article.id})}" class="link-modify-article">수정</a>
                             </li>
                             <li>
-                                <form class="form-delete" action="/questions/423" method="POST">
-                                    <input type="hidden" name="_method" value="DELETE">
+                                <form class="form-delete" th:action="@{/questions/{id}(id=${article.id})}" method="post">
+                                    <input type="hidden" name="_method" value="DELETE" />
                                     <button class="link-delete-article" type="submit">삭제</button>
                                 </form>
                             </li>
                             <li>
-                                <a class="link-modify-article" href="/index.html">목록</a>
+                                <a class="link-modify-article" href="/">목록</a>
                             </li>
                         </ul>
                     </div>
