--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -35,6 +35,11 @@
                                     <span th:text="${user.email}">이메일</span>
                                 </a>
                             </p>
+                            <div th:if="${session.loginUser != null and session.loginUser.userId == user.userId}" style="margin-top: 10px;">
+                                <a th:href="@{/users/{id}/form(id=${user.userId})}" class="alert alert-danger" style="display: inline-block; margin-top: 5px;">
+                                    개인정보수정
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
