--- a/src/main/resources/templates/qna/change.html
+++ b/src/main/resources/templates/qna/change.html
@@ -18,11 +18,11 @@
 <div class="container" id="main">
     <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
         <div class="panel panel-default content-main">
-            <form name="question" method="post">
+            <form th:action="@{/boards/{id}(id=${post.id})}" method="post">
                 <input type="hidden" name="_method" value="put"/>
                 <div class="form-group">
                     <label for="writer">글쓴이</label>
-                    <input class="form-control" id="writer" name="writer" placeholder="글쓴이" th:value="${writerName}" readonly/>
+                    <input class="form-control" id="writer" name="writer" placeholder="글쓴이" th:value="${post.getUser().getName()}" readonly/>
                 </div>
                 <div class="form-group">
                     <label for="title">제목</label>
@@ -32,7 +32,7 @@
                     <label for="content">내용</label>
                     <textarea name="content" id="content" rows="5" class="form-control"></textarea>
                 </div>
-                <button type="submit" class="btn btn-success clearfix pull-right">질문하기</button>
+                <button type="submit" class="btn btn-success clearfix pull-right">수정하기</button>
                 <div class="clearfix" />
             </form>
         </div>
