--- a/src/main/resources/templates/error/general-error.html
+++ b/src/main/resources/templates/error/general-error.html
@@ -9,6 +9,7 @@
 <div class="container mt-5">
     <div class="alert alert-danger rounded shadow-sm" role="alert" style="background-color: #f8d7da;">
         <h4 class="alert-heading">🚨 알 수 없는 오류가 발생했어요!</h4>
+        <p th:text="${errorMessage}">죄송해요, 문제가 발생했어요.</p>
         <a href="/" class="btn btn-danger">홈으로 돌아가기</a>
     </div>
 </div>
