--- a/src/main/resources/templates/error/null-pointer.html
+++ b/src/main/resources/templates/error/null-pointer.html
@@ -9,6 +9,7 @@
 <div class="container mt-5">
     <div class="alert alert-warning rounded shadow-sm" role="alert" style="background-color: #fff3cd;">
         <h4 class="alert-heading">🤔 요청하신 내용을 찾을 수 없어요!</h4>
+        <p th:text="${errorMessage}">죄송해요, 문제가 발생했어요.</p>
         <a href="/" class="btn btn-warning">홈으로 돌아가기</a>
     </div>
 </div>
