refactor: 게시글 작성 처리

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -28,7 +28,7 @@
                                      class="article-author-thumb" alt="">
                             </div>
                             <div class="article-header-text">
-                                <span class="article-author-name" th:text="${board.writer}">작성자</span>
+                                <span class="article-author-name" th:text="${board.writer.name}">작성자</span>
                                 <span class="article-header-time">방금 전</span>
                             </div>
                         </div>
