refactor: alert 창 header에 추가 -> 중복 제거

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
                                 <div class="auth-info">
 <!--                                    <i class="icon-add-comment"></i>-->
 <!--                                    <span class="time" th:text="${board.createdDate}"></span>-->
-                                    <span class="author" th:text="${board.writer}"></span>
+                                    <span class="author" th:text="${board.writer.name}"></span>
 <!--                                </div>-->
 <!--                                <div class="reply" title="댓글">-->
 <!--                                    <i class="icon-reply"></i>-->
