--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -38,7 +38,7 @@
                         <div class="article-util">
                             <ul class="article-util-list">
                                 <li>
-                                    <a class="link-modify-article" href="#">수정</a>
+                                    <a th:href="@{/boards/{boardId}/edit(boardId=${board.boardId})}" class="link-modify-article">수정</a>
                                 </li>
                                 <li>
                                     <form class="form-delete" action="#" method="POST">
