feat: 게시글 삭제

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -41,7 +41,7 @@
                                     <a th:href="@{/boards/{boardId}/edit(boardId=${board.boardId})}" class="link-modify-article">수정</a>
                                 </li>
                                 <li>
-                                    <form class="form-delete" action="#" method="POST">
+                                    <form class="form-delete" action="/boards/{boardId}" method="POST">
                                         <input type="hidden" name="_method" value="DELETE">
                                         <button class="link-delete-article" type="submit">삭제</button>
                                     </form>
