[훈] step5-2 게시글 권한 부여 (#53)
* Feat(UserController): 회원가입 후 로그인이 유지되게 끔 코드 변경

- HttpSession을 추가하여 회원가입 후 로그인이 유지되게끔 구현

* Feat: 로그인한 사용자만 게시글 작성, 세부내용 조회할 수 있게끔 기능 추가

- HttpSession을 파라미터로 추가하여 로그인 여부 체크

* Refactor: 로그아웃 요청 변경

- GET 요청에서 POST 요청으로 변경
- 그에 따른 html 폼 수정

* Fix(ArticleController): 게시글 상세조회 로직에서 본인만 볼 수 있게 구현하여 로그인한 유저들이 볼 수 있도록 수정

* feat(qna/form.html): 글쓴이 입력 필드 삭제

* Refactor(ArticleService): @Transaction 위치 변경

- 클래스 레벨에서 save 메서드로 변경

* Refactor: 게시글 작성에서 글쓴이를 UserId로 조회하는 방식에서 session에 저장된 User의 Id로 조회하는 방식으로 변경

* Refactor: 세션에 객체 보관에서 id 보관으로 변경

- 세션에 User 객체를 보관하는 방식에서 User의 id를 보관하는 방식으로 변경

* Refactor(ArticleRequest): 입력 폼에서 글쓴이 부분을 삭제했기 때문에 ArticleRequest DTO에서 writerId 제거

* Refactor: 생성자가 1개이기 때문에 @Autowired 어노테이션 제거

* Feat: 게시글 수정 기능 추가

- Article 엔티티에 updateArticle 메서드 추가
- 업데이트 폼 html 추가
- 업데이트 폼 GET 요청 추가
- 게시글 업데이트 POST 요청 추가

* Feat: 삭제 기능 추가

- 게시글 html에서 삭제 버튼에 onsubmit 속성을 추가하여 대화상자 띄우는 기능
- 삭제 기능 controller, service 구현

* Feat: 삭제 요청 추가 Delete 요청

* Refactor: 회원정보 수정 기능에서 setter를 사용하는 방식에서 User 클래스의 updateUser 메서드를 쓰는 방식을 변경

- User 클래스의 setter 제거

* Refactor: 회원정보 수정에서 dto로 새로운 객체를 만드는 방식에서 저장된 유저를 조회하여 그 유저를 수정하는 방식으로 변경`

* Feat: 게시글 수정, 삭제 및 유저정보 수정 버튼이 본인일 경우에만 보이게 조건문 추가

* Refactor: UpdateUserRequest dto에서 toEntity 메서드 제거

- User 클래스에서 setId 메서드 제거

* Feat(index.html): 게시글의 작성자 이름을 누르면 프로필 화면으로 가도록 기능 추가

* Feat(Article): Article 클래스에 등록날짜 필드 추가

- 등록날짜가 보이도록 html 수정

* Feat(show.html): 게시글 상세조회에서 글쓴이를 누르면 글쓴이 프로필로 가는 기능 구현

* Refactor(ArticleController): 수정 및 삭제를 할 때에 본인의 게시글이 아니라면 오류 페이지로 이동하는 기능 추가

* Refactor: 중복되는 url 상수로 지정

* Refactor: updateArticle 메서드의 catch문 간소화

* Feat: 공통되는 문자열 상수 처리

* Docs: 5단계 구현내용 작성

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -60,7 +60,7 @@
         <div class="navbar-header">
             <a href="#" style="margin-left:15px;" class="navbar-btn btn btn-default btn-plus dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-home" style="color:#dd1111;"></i> Home <small><i class="glyphicon glyphicon-chevron-down"></i></small></a>
             <ul class="nav dropdown-menu">
-                <li><a href="/users/profile"><i class="glyphicon glyphicon-user" style="color:#1111dd;"></i> Profile</a></li>
+                <li><a href="/users/profile" th:href="@{/users/{id}(id=${session.LOGGED_IN_USER_ID})}"><i class="glyphicon glyphicon-user" style="color:#1111dd;"></i> Profile</a></li>
                 <li class="nav-divider"></li>
                 <li><a href="#"><i class="glyphicon glyphicon-cog" style="color:#dd1111;"></i> Settings</a></li>
             </ul>
@@ -75,11 +75,15 @@
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/">Posts</a></li>
-                <li th:if="${session.LOGGED_IN_USER == null}"><a href="/users/login" role="button">로그인</a></li>
-                <li th:if="${session.LOGGED_IN_USER == null}"><a href="/users/join" role="button">회원가입</a></li>
-                <li th:if="${session.LOGGED_IN_USER != null}"><a href="/users/logout" role="button">로그아웃</a></li>
-                <li th:if="${session.LOGGED_IN_USER != null}">
-                    <a th:href="@{/users/{id}/verify(id=${session.LOGGED_IN_USER.id})}" role="button">개인정보수정</a>
+                <li th:if="${session.LOGGED_IN_USER_ID == null}"><a href="/users/login" role="button">로그인</a></li>
+                <li th:if="${session.LOGGED_IN_USER_ID == null}"><a href="/users/join" role="button">회원가입</a></li>
+                <li th:if="${session.LOGGED_IN_USER_ID != null}">
+                    <form action="/users/logout" method="post" style="margin: 0; padding: 0;">
+                        <button type="submit" class="btn btn-link" style="text-decoration: none; color: #777; padding: 15px; border: none; background: none;">로그아웃</button>
+                    </form>
+                </li>
+                <li th:if="${session.LOGGED_IN_USER_ID != null}">
+                    <a th:href="@{/users/{id}/verify(id=${session.LOGGED_IN_USER_ID})}" role="button">개인정보수정</a>
                 </li>
             </ul>
         </div>
